gentei/_k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: web
          image: ghcr.io/member-gentei/gentei:latest
          args:
            - serve
            - "--address"
            - ":5000"
          volumeMounts:
            - name: google-sa
              mountPath: /secret/google-sa
              readOnly: true
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 5000
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 30
            httpGet:
              path: /healthz
              port: 5000
      volumes:
        - name: google-sa
          secret:
            secretName: google-sa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: async
spec:
  selector:
    matchLabels:
      app: async
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: async
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: async
          image: ghcr.io/member-gentei/gentei:latest
          args:
            - async
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: google-sa
              mountPath: /secret/google-sa
              readOnly: true
      volumes:
        - name: google-sa
          secret:
            secretName: google-sa

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
spec:
  selector:
    matchLabels:
      app: bot
  replicas: 1
  template:
    metadata:
      labels:
        app: bot
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: bot
          image: ghcr.io/member-gentei/gentei:latest
          args:
            - bot
            - "--prod"
          resources:
            requests:
              memory: "1024Mi"
              cpu: "10m"
            limits:
              memory: "2048Mi"
              cpu: "4000m"
          volumeMounts:
            - name: google-sa
              mountPath: /secret/google-sa
              readOnly: true
      volumes:
        - name: google-sa
          secret:
            secretName: bot-google-sa
