gentei/_k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    name: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: gentei-api.tindabox.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 80
